lab1/Test/L1-A-13-72.output
Error Type A at Line 1
Error Type B at Line 3
Error Type A at Line 13
Error Type B at Line 15
Error Type B at Line 21
Error Type B at Line 28
Error Type B at Line 38
Error Type A at Line 39
Error Type B at Line 43
Error Type B at Line 48
Error Type B at Line 49
Error Type A at Line 49
Error Type B at Line 49
Error Type B at Line 50
